5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4074/executions/1621_2936.log
== TEST (2019-04-01 18:34:30) 
-- CODE:
from math import *
pressão = input("pressão de um gás" + atm)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pressão = input("pressão de um gás" + atm)
NameError: name 'atm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:34:48) 
-- CODE:
from math import *
pressão = input("pressão de um gás ", atm)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    pressão = input("pressão de um gás ", atm)
NameError: name 'atm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:36:08) 
-- CODE:
from math import *
pressão = input("pressão do gás ")
mols = imput("número de mols do gás ")
temperatura = input("temperatura do gás")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mols = imput("número de mols do gás ")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:36:37) 
-- CODE:
from math import *
pressão=input("pressão do gás ")
mols = imput("número de mols do gás ")
temperatura = input("temperatura do gás")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mols = imput("número de mols do gás ")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:36:57) 
-- CODE:
from math import *
pressão= input("pressão do gás")
mols = imput("número de mols do gás")
temperatura = input("temperatura do gás")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mols = imput("número de mols do gás")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:04) 
-- CODE:
from math import *
#pressão= input("pressão do gás")
mols = imput("número de mols do gás")
temperatura = input("temperatura do gás")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mols = imput("número de mols do gás")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:21) 
-- CODE:
from math import *
#pressão= input("pressão do gás: ")
mols = imput("número de mols do gás: ")
temperatura = input("temperatura do gás: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mols = imput("número de mols do gás: ")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:37:28) 
-- CODE:
from math import *
pressão= input("pressão do gás: ")
mols = imput("número de mols do gás: ")
temperatura = input("temperatura do gás: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mols = imput("número de mols do gás: ")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:38:25) 
-- CODE:
from math import *
pressão = input("pressão do gás: ")
mols = input("número de mols do gás: ")
temperatura = input("temperatura do gás: ")

print(pressão + atm)
-- EXECUTION TIME:
0.133759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2936/main.py", line 6, in <module>
    print(press\xe3o + atm)
NameError: name 'atm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:26) 
-- CODE:
from math import *
pressão = input("pressão do gás: ")
mols = input("número de mols do gás: ")
temperatura = input("temperatura do gás: ")

print(pressão + atm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pressão + atm)
NameError: name 'atm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:34) 
-- CODE:
from math import *
#pressão = input("pressão do gás: ")
mols = input("número de mols do gás: ")
temperatura = input("temperatura do gás: ")

print(pressão + atm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pressão + atm)
NameError: name 'pressão' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:41) 
-- CODE:
from math import *
#pressão = input("pressão do gás: ")
#mols = input("número de mols do gás: ")
#temperatura = input("temperatura do gás: ")

print(pressão + atm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pressão + atm)
NameError: name 'pressão' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:56) 
-- CODE:
from math import *
#pressao = input("pressao do gás: ")
#mols = input("número de mols do gás: ")
#temperatura = input("temperatura do gás: ")

print(pressao + atm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pressao + atm)
NameError: name 'pressao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:08) 
-- CODE:
from math import *
pressao = input("pressao do gás: ")
mols = input("número de mols do gás: ")
temperatura = input("temperatura do gás: ")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pressao + atm)
NameError: name 'pressao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:18) 
-- CODE:
from math import *
pressao = input("pressao do gas: ")
mols = input("número de mols do gas: ")
temperatura = input("temperatura do gas: ")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pressao + atm)
NameError: name 'pressao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:23) 
-- CODE:
from math import *
pressao = input("pressao do gas: ")
mols = input("número de mols do gas: ")
temperatura = input("temperatura do gas: ")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pressao + atm)
NameError: name 'pressao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:16) 
-- CODE:
from math import *
p = input("pressao do gas: ")
n = input("número de mols do gas: ")
T = input("temperatura do gas: ")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(pressao + atm)
NameError: name 'pressao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:57) 
-- CODE:
from math import *
p = input("pressao do gas: ")
n = input("número de mols do gas: ")
T = input("temperatura do gas: ")
print("T + 273,15")

-- OUTPUT:
T + 273,15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:11) 
-- CODE:
from math import *
#p = input("pressao do gas: ")
#n = input("número de mols do gas: ")
T = input("temperatura do gas: ")
print("T + 273,15")

-- OUTPUT:
T + 273,15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:24) 
-- CODE:
from math import *
#p = input("pressao do gas: ")
#n = input("número de mols do gas: ")
T = input("temperatura do gas: ")
print("T + 273,15")

-- OUTPUT:
T + 273,15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:35) 
-- CODE:
from math import *
#p = input("pressao do gas: ")
#n = input("número de mols do gas: ")
T = input("temperatura do gas: 3")
print("T + 273,15")

-- OUTPUT:
T + 273,15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:41) 
-- CODE:
from math import *
#p = input("pressao do gas: ")
#n = input("número de mols do gas: ")
T = input("temperatura do gas: ")
print("T + 273,15")

-- OUTPUT:
T + 273,15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:01) 
-- CODE:
from math import *
#p = input("pressao do gas: ")
#n = input("número de mols do gas: ")
T = input("temperatura do gas: ")
print("T+273,15")

-- OUTPUT:
T+273,15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:47) 
-- CODE:
from math import *
#p = input("pressao do gas: ")
#n = input("número de mols do gas: ")
#T = input("temperatura do gas: ")
from soma

-- ERROR:
File "XXXX", line 5
    from soma
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:55) 
-- CODE:
from math import *
#p = input("pressao do gas: ")
#n = input("número de mols do gas: ")
#T = input("temperatura do gas: ")
from soma*


-- ERROR:
File "XXXX", line 5
    from soma*
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:46:13) 
-- CODE:
from math import *
p = float(input("pressao do gas: "))
#n = float(input("número de mols do gas: "))
#T = float(input("temperatura do gas: "))


-- ERROR:
File "XXXX", line 5
    from soma*
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:46:18) 
-- CODE:
from math import *
p = float(input("pressao do gas: "))
n = float(input("número de mols do gas: "))
#T = float(input("temperatura do gas: "))


-- ERROR:
File "XXXX", line 5
    from soma*
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:46:22) 
-- CODE:
from math import *
p = float(input("pressao do gas: "))
n = float(input("número de mols do gas: "))
T = float(input("temperatura do gas: "))


-- ERROR:
File "XXXX", line 5
    from soma*
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:18) 
-- CODE:
from math import *
p = float(input("pressao do gas: "))
n = float(input("número de mols do gas: "))
T = float(input("temperatura do gas: "))

pressao = (t+273,15)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pressao = (t+273,15)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:28) 
-- CODE:
from math import *
#p = float(input("pressao do gas: "))
#n = float(input("número de mols do gas: "))
#T = float(input("temperatura do gas: "))

pressao = (t+273,15)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pressao = (t+273,15)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:23) 
-- CODE:
from math import *
p = float(input("pressao do gas: "))
n = float(input("número de mols do gas: "))
T = float(input("temperatura do gas: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pressao = (t+273,15)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:38) 
-- CODE:
from math import *
p = float(input("pressao do gas: "))
n = float(input("numero de mols do gas: "))
T = float(input("temperatura do gas: "))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pressao = (t+273,15)
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:59) 
-- CODE:
from math import *
#p = float(input("pressao do gas: "))
#n = float(input("numero de mols do gas: "))
T = float(input("temperatura do gas: "))

soma = (T + 273.15)
print(soma)
-- OUTPUT:
273.15999999999997
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:19) 
-- CODE:
from math import *
#p = float(input("pressao do gas: "))
#n = float(input("numero de mols do gas: "))
T = float(input("temperatura do gas: "))

soma = (T + 273.15)
print(soma)
-- OUTPUT:
273.15999999999997
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:53) 
-- CODE:
from math import *
#p = float(input("pressao do gas: "))
#n = float(input("numero de mols do gas: "))
T = float(input("temperatura do gas: "))

soma = (T + 273.15)
print(soma)
-- OUTPUT:
273.15999999999997
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
